--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,13 @@
 	<dependencies>
 
 		<!-- OSGi -->
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.5</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
