--- a/config/com.ge.predix.workshop.nodeconfig.json
+++ b/config/com.ge.predix.workshop.nodeconfig.json
@@ -1,17 +1,12 @@
 [
-   {
-     "nodeName": "Light:TAE",  
-     "nodeType": "Light",
-     "nodePin": 1
-   },
-   {  
-      "nodeName": "Sound:TAE",  
-      "nodeType": "Sound",  
+    {
+      "nodeName": "Sonar:TAE",
+      "nodeType": "Sonar",
       "nodePin": 2
    },
-   {  
-      "nodeName": "Temperature:TAE",  
-      "nodeType": "Temperature",  
-      "nodePin": 0
+   {
+      "nodeName": "Button:TAE",
+      "nodeType": "Button",
+      "nodePin": 2
    }
 ]
